tests/fail/func_recursion.crema
def int foo() {
    return foo()
}
